--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -30973,7 +30973,8 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
       left: 0;
       top: 0;
       right: 0;
-      bottom: 0; }
+      bottom: 0;
+      overflow: hidden; }
       #mobile-menu .menu-contents > .bg img {
         position: absolute;
         left: 0;
@@ -30984,6 +30985,45 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
            object-fit: cover;
         -o-object-position: center;
            object-position: center; }
+      #mobile-menu .menu-contents > .bg .logo {
+        display: none;
+        position: absolute;
+        right: -10%;
+        top: 20%;
+        width: 60%; }
+        @media (min-width: 992px) {
+          #mobile-menu .menu-contents > .bg .logo {
+            display: block; } }
+        #mobile-menu .menu-contents > .bg .logo::before {
+          content: '';
+          display: block;
+          height: 0;
+          padding-top: 95.064072%; }
+        #mobile-menu .menu-contents > .bg .logo svg {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          opacity: .2; }
+          #mobile-menu .menu-contents > .bg .logo svg #star > path {
+            fill: rgba(255, 255, 255, 0);
+            -webkit-transition: fill;
+            transition: fill;
+            -webkit-transition-duration: 0s;
+                    transition-duration: 0s;
+            -webkit-transition-delay: .2s;
+                    transition-delay: .2s;
+            stroke-dasharray: 10000;
+            stroke-dashoffset: 10000; }
+            body.mobile-menu-active #mobile-menu .menu-contents > .bg .logo svg #star > path {
+              -webkit-transition: fill 1s 3.2s;
+              transition: fill 1s 3.2s;
+              fill: #fff;
+              -webkit-animation: star-dash 3s linear forwards;
+                      animation: star-dash 3s linear forwards;
+              -webkit-animation-delay: .2s;
+                      animation-delay: .2s; }
     #mobile-menu .menu-contents > .inner {
       width: 100%;
       position: relative; }
@@ -30996,6 +31036,14 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
           -webkit-box-direction: normal;
               -ms-flex-direction: column;
                   flex-direction: column; } }
+
+@-webkit-keyframes star-dash {
+  to {
+    stroke-dashoffset: 0; } }
+
+@keyframes star-dash {
+  to {
+    stroke-dashoffset: 0; } }
 
 #mobile-menu-header {
   padding: .75rem 1rem; }
