--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -491,6 +491,7 @@ body.mobile-menu-active {
 			top: 0;
 			right: 0;
 			bottom: 0;
+			overflow: hidden;
 			// @include media-breakpoint-up(lg) {
 			// 	display: block;
 			// }
@@ -503,6 +504,44 @@ body.mobile-menu-active {
 				object-fit: cover;
 				object-position: center;
 			}
+			.logo {
+				display: none;
+				position: absolute;
+				right: -10%;
+				top: 20%;
+				width: 60%;
+				@include media-breakpoint-up(lg) {
+					display: block;
+				}
+				&::before {
+					content: '';
+					display: block;
+					height: 0;
+					padding-top: 95.064072%;
+				}
+				svg {
+					position: absolute;
+					left: 0;
+					top: 0;
+					width: 100%;
+					height: 100%;
+					opacity: .2;
+					#star > path {
+						fill: rgba(#fff, 0);
+						transition: fill;
+						transition-duration: 0s;
+						transition-delay: .2s;
+						stroke-dasharray: 10000;
+						stroke-dashoffset: 10000;
+						body.mobile-menu-active & {
+							transition: fill 1s 3.2s;
+							fill: #fff;
+							animation: star-dash 3s linear forwards;
+							animation-delay: .2s;
+						}
+					}
+				}
+			}
 		}
 		> .inner {
 			width: 100%;
@@ -512,6 +551,11 @@ body.mobile-menu-active {
 				flex-direction: column;
 			}
 		}
+	}
+}
+@keyframes star-dash {
+	to {
+		stroke-dashoffset: 0;
 	}
 }
 #mobile-menu-header {
