--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -30881,21 +30881,6 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
               transform-origin: 100% 100%; }
   body.mobile-menu-active #header #mobile-menu-toggle .icon {
     background-color: transparent; }
-    @media (min-width: 768px) {
-      body.mobile-menu-active #header #mobile-menu-toggle .icon {
-        -webkit-transform: translateX(7px);
-            -ms-transform: translateX(7px);
-                transform: translateX(7px); } }
-    @media (min-width: 992px) {
-      body.mobile-menu-active #header #mobile-menu-toggle .icon {
-        -webkit-transform: translateX(15px);
-            -ms-transform: translateX(15px);
-                transform: translateX(15px); } }
-    @media (min-width: 1200px) {
-      body.mobile-menu-active #header #mobile-menu-toggle .icon {
-        -webkit-transform: translateX(22px);
-            -ms-transform: translateX(22px);
-                transform: translateX(22px); } }
     body.mobile-menu-active #header #mobile-menu-toggle .icon::before {
       width: 110%;
       -webkit-transform: rotate(-45deg);
@@ -31079,30 +31064,41 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
       -ms-flex-align: center;
           align-items: center;
   margin-right: -1rem; }
+  @media (min-width: 768px) {
+    #mobile-menu-close {
+      margin-right: -0.6rem; } }
   @media (min-width: 992px) {
     #mobile-menu-close {
-      margin-right: -2rem; } }
+      margin-right: -1rem; } }
+  @media (min-width: 1200px) {
+    #mobile-menu-close {
+      margin-right: -0.6rem; } }
   #mobile-menu-close:hover .label {
     color: rgba(255, 255, 255, 0.75); }
   #mobile-menu-close:hover .icon {
-    background-color: rgba(255, 255, 255, 0.6); }
+    color: white;
+    -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+            transform: scale(1.3); }
   #mobile-menu-close .label {
     display: block;
-    margin-right: .75rem;
+    margin-right: 0;
     color: rgba(255, 255, 255, 0.5);
     letter-spacing: .1em;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1rem;
-    -webkit-transition: color .15s;
-    transition: color .15s; }
+    -webkit-transition: color .15s, margin .15s ease-out;
+    transition: color .15s, margin .15s ease-out; }
   #mobile-menu-close .icon {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: transparent;
     font-size: 3rem;
     width: 3rem;
-    color: #1A599A;
-    -webkit-transition: background-color .15s;
-    transition: background-color .15s; }
+    color: rgba(255, 255, 255, 0.75);
+    -webkit-transition: color .15s, -webkit-transform .15s ease-out;
+    transition: color .15s, -webkit-transform .15s ease-out;
+    transition: color .15s, transform .15s ease-out;
+    transition: color .15s, transform .15s ease-out, -webkit-transform .15s ease-out; }
 
 #mobile-menu-primary-navigation {
   padding-right: 1.25rem; }
