--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -410,15 +410,15 @@
 	body.mobile-menu-active & {
 		.icon {
 			background-color: transparent;
-			@include media-breakpoint-up(md) {
-				transform: translateX(7px);
-			}
-			@include media-breakpoint-up(lg) {
-				transform: translateX(15px);
-			}
-			@include media-breakpoint-up(xl) {
-				transform: translateX(22px);
-			}
+			// @include media-breakpoint-up(md) {
+			// 	transform: translateX(7px);
+			// }
+			// @include media-breakpoint-up(lg) {
+			// 	transform: translateX(15px);
+			// }
+			// @include media-breakpoint-up(xl) {
+			// 	transform: translateX(22px);
+			// }
 			&::before {
 				width: 110%;
 				transform: rotate(-45deg);
@@ -597,37 +597,45 @@ body.mobile-menu-active {
 		width: auto;
 		align-items: center;
 		margin-right: -1rem;
+		@include media-breakpoint-up(md) {
+			margin-right: -0.6rem;
+		}
 		@include media-breakpoint-up(lg) {
-			margin-right: -2rem;
+			margin-right: -1rem;
+		}
+		@include media-breakpoint-up(xl) {
+			margin-right: -0.6rem;
 		}
 		&:hover {
 			.label {
 				color: rgba(#fff, .75);
+				// margin-right: 2px;
 			}
 			.icon {
-				background-color: rgba(#fff, .6);
+				color: rgba(#fff, 1);
+				transform: scale(1.3);
 			}
 		}
 	// }
 	.label {
 		// @include media-breakpoint-up(lg) {
 			display: block;
-			margin-right: .75rem;
+			margin-right: 0;
 			color: rgba(#fff, .5);
 			letter-spacing: .1em;
 			text-transform: uppercase;
 			font-weight: 700;
 			font-size: 1rem;
-			transition: color .15s;
+			transition: color .15s, margin .15s ease-out;
 		// }
 	}
 	.icon {
 		// @include media-breakpoint-up(lg) {
-			background-color: rgba(#fff, .4);
+			background-color: transparent;
 			font-size: 3rem;
 			width: 3rem;
-			color: $darker-blue;
-			transition: background-color .15s;
+			color: rgba(#fff, .75);
+			transition: color .15s, transform .15s ease-out;
 		// }
 	}
 }
