--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -21544,6 +21544,9 @@ nav.pagination {
     transition: opacity .75s, transform .75s ease-out;
     transition: opacity .75s, transform .75s ease-out, -webkit-transform .75s ease-out; }
 
+.svg-asset {
+  display: none; }
+
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container-featured-image.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-promo.alignfull,
@@ -21708,6 +21711,51 @@ nav.pagination {
   margin-top: -30vw;
   border-radius: 100%;
   overflow: hidden; }
+
+.wp-block-crown-blocks-container.has-animated-star-bg > .container-bg > .inner > .animated-star {
+  display: block;
+  position: absolute;
+  right: -10%;
+  top: 20%;
+  width: 60%; }
+  .wp-block-crown-blocks-container.has-animated-star-bg > .container-bg > .inner > .animated-star.animated svg #star > path {
+    -webkit-transition: fill 1s 3.2s;
+    transition: fill 1s 3.2s;
+    fill: #fff;
+    -webkit-animation: animated-star-dash 3s linear forwards;
+            animation: animated-star-dash 3s linear forwards;
+    -webkit-animation-delay: .2s;
+            animation-delay: .2s; }
+  .wp-block-crown-blocks-container.has-animated-star-bg > .container-bg > .inner > .animated-star::before {
+    content: '';
+    display: block;
+    height: 0;
+    padding-top: 95.064072%; }
+  .wp-block-crown-blocks-container.has-animated-star-bg > .container-bg > .inner > .animated-star svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .1; }
+    .wp-block-crown-blocks-container.has-animated-star-bg > .container-bg > .inner > .animated-star svg #star > path {
+      fill: rgba(255, 255, 255, 0);
+      -webkit-transition: fill;
+      transition: fill;
+      -webkit-transition-duration: 0s;
+              transition-duration: 0s;
+      -webkit-transition-delay: .2s;
+              transition-delay: .2s;
+      stroke-dasharray: 10000;
+      stroke-dashoffset: 10000; }
+
+@-webkit-keyframes animated-star-dash {
+  to {
+    stroke-dashoffset: 0; } }
+
+@keyframes animated-star-dash {
+  to {
+    stroke-dashoffset: 0; } }
 
 /*	Multi-Column
 ---------------------------------------------------------*/
