--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -158,6 +158,50 @@
 			}
 		}
 	}
+	&.has-animated-star-bg {
+		> .container-bg > .inner > .animated-star {
+			display: block;
+			position: absolute;
+			right: -10%;
+			top: 20%;
+			width: 60%;
+			&.animated {
+				svg #star > path {
+					transition: fill 1s 3.2s;
+					fill: #fff;
+					animation: animated-star-dash 3s linear forwards;
+					animation-delay: .2s;
+				}
+			}
+			&::before {
+				content: '';
+				display: block;
+				height: 0;
+				padding-top: 95.064072%;
+			}
+			svg {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				opacity: .1;
+				#star > path {
+					fill: rgba(#fff, 0);
+					transition: fill;
+					transition-duration: 0s;
+					transition-delay: .2s;
+					stroke-dasharray: 10000;
+					stroke-dashoffset: 10000;
+				}
+			}
+		}
+	}
+}
+@keyframes animated-star-dash {
+	to {
+		stroke-dashoffset: 0;
+	}
 }
 
 
