--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -22157,6 +22157,13 @@ nav.pagination {
 .svg-asset {
   display: none; }
 
+.text-circled {
+  display: inline-block;
+  border: 2px solid #0381C3;
+  border-radius: 50%;
+  padding-left: .5em;
+  padding-right: 0.5em; }
+
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-container-featured-image.alignfull,
 .wp-block-crown-blocks-container.alignfull + .wp-block-crown-blocks-promo.alignfull,
@@ -32844,3 +32851,15 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
   padding-left: 1rem;
   padding-right: 1rem;
   width: 100%; }
+
+.wp-block-crown-blocks-hover-container.hover-type-left-aligned .details::after {
+  font-size: 2rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  line-height: 1;
+  font-family: icomoon;
+  content: ""; }
