--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -607,3 +607,102 @@ $gform-gutter-width: 10px;
 		}
 	}
 }
+
+.intake-form_wrapper {
+	.gf_progressbar_wrapper {
+		.gf_progressbar_title {
+			margin-bottom: 2rem;
+			.gf_step_pages {
+				display: block;
+				font-size: 1.125rem;
+			}
+		}
+		.gf_progressbar {
+			display: none;
+		}
+	}
+	.gsection.form-title {
+		.gsection_title {
+			margin-top: 0;
+			font-size: 2rem;
+		}
+		.gsection_description {
+			text-align: center;
+			font-size: 1.25rem;
+			margin-top: -.5rem;
+			color: #aaa;
+		}
+	}
+	.gsection_title {
+		font-weight: 700;
+		border-bottom: none;
+		margin-top: 2rem;
+		font-size: 1.25rem;
+	}
+	textarea {
+		@extend .form-control;
+		border: none;
+		padding: add($input-padding-y, $input-border-width) add($input-padding-x, -.25rem);
+		box-shadow: inset 0 -2px $primary;
+		padding-left: 0;
+		padding-right: 0;
+		background-color: transparent;
+		&:focus {
+			box-shadow: inset 0 -2px $secondary;
+		}
+		&.small {
+			height: 100px;
+		}
+	}
+	.gfield--type-consent {
+		padding-left: 3rem;
+		position: relative;
+		min-height: calc(2rem + 3px);
+		.gfield_label {
+			font-size: inherit;
+		}
+		.gfield_description {
+			color: inherit;
+			font-size: inherit;
+		}
+		input[type=checkbox] {
+			position: absolute;
+			left: 0;
+			top: 3px;
+			width: 2rem;
+			height: 2rem;
+		}
+		.gfield_consent_label {
+			display: none;
+		}
+	}
+	.gform_page_footer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 2rem;
+		.gform_next_button,
+		button[type=submit] {
+			@extend .btn-blue;
+			font-size: 1.125rem;
+			padding: 1rem 2rem;
+			border-radius: 3px;
+		}
+		.gform_previous_button {
+			order: 2;
+			@extend .btn-link;
+			background-color: transparent;
+			padding-bottom: 0;
+			border-bottom: none;
+			margin-top: 1rem;
+			+ .gform_next_button,
+			+ button[type=submit] {
+				
+			}
+		}
+		.gform_ajax_spinner {
+			order: 3;
+			margin-top: 1rem;
+		}
+	}
+}
