--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -29535,6 +29535,77 @@ body.mobile-menu-active {
   margin-top: 2rem;
   font-size: 1.25rem; }
 
+.intake-form_wrapper .gfield.accordion.expanded .gfield_label {
+  background-color: #1A599A;
+  color: #fff; }
+  .intake-form_wrapper .gfield.accordion.expanded .gfield_label::before {
+    content: '\2013'; }
+
+.intake-form_wrapper .gfield.accordion.expanded .ginput_container {
+  height: auto;
+  padding: 1rem 1.5rem 1.5rem; }
+
+.intake-form_wrapper .gfield.accordion .gfield_label {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 0;
+  background-color: #D0E4F8;
+  font-size: 1.125rem;
+  padding: 1rem 1.5rem;
+  padding-left: 1rem;
+  position: relative;
+  -webkit-transition: background-color .2s, color .2s;
+  transition: background-color .2s, color .2s; }
+  .intake-form_wrapper .gfield.accordion .gfield_label::before {
+    content: '+';
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 2rem;
+            flex: 0 0 2rem;
+    margin: -.5rem 0;
+    font-size: 2rem;
+    text-align: center;
+    margin-right: 1rem; }
+
+.intake-form_wrapper .gfield.accordion .ginput_container {
+  height: 0;
+  overflow: hidden; }
+  .intake-form_wrapper .gfield.accordion .ginput_container .gfield_checkbox {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: 0 -4px -8px; }
+    .intake-form_wrapper .gfield.accordion .ginput_container .gfield_checkbox li.gchoice {
+      margin: 0 4px 8px;
+      padding: 0;
+      border: none; }
+      .intake-form_wrapper .gfield.accordion .ginput_container .gfield_checkbox li.gchoice input {
+        display: none; }
+      .intake-form_wrapper .gfield.accordion .ginput_container .gfield_checkbox li.gchoice input:checked + label {
+        background-color: #53b785;
+        border-color: #53b785;
+        color: #fff; }
+      .intake-form_wrapper .gfield.accordion .ginput_container .gfield_checkbox li.gchoice label {
+        display: block;
+        padding: .5rem .75rem;
+        border-radius: 10rem;
+        border: 2px solid #032040;
+        font-weight: 700;
+        font-size: 0.875rem;
+        color: #1A599A;
+        -webkit-transition: background-color .15s, border-color .15s, color .15s;
+        transition: background-color .15s, border-color .15s, color .15s;
+        cursor: pointer; }
+
+.intake-form_wrapper .gfield.accordion + .gfield.accordion {
+  margin-top: -1rem; }
+
 .intake-form_wrapper input[type="text"] {
   padding: calc(0.8rem + 1px) 0.8rem;
   background-color: rgba(3, 32, 64, 0.05); }
