--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -26383,6 +26383,81 @@ form.center-search .form-footer button {
     -webkit-transition: right .2s ease-out, opacity .2s;
     transition: right .2s ease-out, opacity .2s; }
 
+.wp-block-crown-blocks-button.cta-link a.btn-link, .wp-block-crown-blocks-button.cta-link .wp-block-crown-blocks-featured-post-slider article .entry-link a, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link a, .wp-block-crown-blocks-button.cta-link .intake-form_wrapper .gform_page_footer a.gform_previous_button, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link a.gform_previous_button {
+  color: inherit !important;
+  letter-spacing: 0;
+  padding-bottom: 0;
+  border-bottom: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .wp-block-crown-blocks-button.cta-link a.btn-link:hover::before, .wp-block-crown-blocks-button.cta-link .wp-block-crown-blocks-featured-post-slider article .entry-link a:hover::before, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link a:hover::before, .wp-block-crown-blocks-button.cta-link .intake-form_wrapper .gform_page_footer a.gform_previous_button:hover::before, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link a.gform_previous_button:hover::before {
+    background-position: 70% 30%; }
+  .wp-block-crown-blocks-button.cta-link a.btn-link::before, .wp-block-crown-blocks-button.cta-link .wp-block-crown-blocks-featured-post-slider article .entry-link a::before, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link a::before, .wp-block-crown-blocks-button.cta-link .intake-form_wrapper .gform_page_footer a.gform_previous_button::before, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link a.gform_previous_button::before {
+    content: '';
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 2rem;
+            flex: 0 0 2rem;
+    margin-right: 0.75rem;
+    height: 2rem;
+    background-color: #343a40;
+    border-radius: 1000px;
+    display: block;
+    background-image: url('data:image/svg+xml,%3csvg width="1200pt" height="1200pt" version="1.1" fill="%23FFFFFF" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg"%3e%3cdefs%3e%3cclipPath id="b"%3e%3cpath d="m883 222.14h94.859v708.86h-94.859z"/%3e%3c/clipPath%3e%3cclipPath id="a"%3e%3cpath d="m269 222.14h708.86v94.855h-708.86z"/%3e%3c/clipPath%3e%3c/defs%3e%3cpath d="m306.34 960.46-66.797-66.797 667.96-667.96 66.797 66.797z" fill-rule="evenodd"/%3e%3cg clip-path="url%28%23b%29"%3e%3cpath d="m883.39 930.62v-708.48h94.465v708.48z" fill-rule="evenodd"/%3e%3c/g%3e%3cg clip-path="url%28%23a%29"%3e%3cpath d="m269.38 316.61v-94.465h708.48v94.465z" fill-rule="evenodd"/%3e%3c/g%3e%3c/svg%3e');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 1rem 1rem;
+    -webkit-transition: background-position .2s;
+    transition: background-position .2s; }
+  .wp-block-crown-blocks-button.cta-link a.btn-link .btn-label, .wp-block-crown-blocks-button.cta-link .wp-block-crown-blocks-featured-post-slider article .entry-link a .btn-label, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link a .btn-label, .wp-block-crown-blocks-button.cta-link .intake-form_wrapper .gform_page_footer a.gform_previous_button .btn-label, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link a.gform_previous_button .btn-label {
+    text-decoration: underline; }
+
+.wp-block-crown-blocks-button.cta-link-red a.btn-link::before, .wp-block-crown-blocks-button.cta-link-red .wp-block-crown-blocks-featured-post-slider article .entry-link a::before, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link-red a::before, .wp-block-crown-blocks-button.cta-link-red .intake-form_wrapper .gform_page_footer a.gform_previous_button::before, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link-red a.gform_previous_button::before {
+  background-color: #D11141; }
+
+.wp-block-crown-blocks-button.cta-link-blue a.btn-link::before, .wp-block-crown-blocks-button.cta-link-blue .wp-block-crown-blocks-featured-post-slider article .entry-link a::before, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link-blue a::before, .wp-block-crown-blocks-button.cta-link-blue .intake-form_wrapper .gform_page_footer a.gform_previous_button::before, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link-blue a.gform_previous_button::before {
+  background-color: #0381C3; }
+
+.wp-block-crown-blocks-button.cta-link-black a.btn-link::before, .wp-block-crown-blocks-button.cta-link-black .wp-block-crown-blocks-featured-post-slider article .entry-link a::before, .wp-block-crown-blocks-featured-post-slider article .entry-link .wp-block-crown-blocks-button.cta-link-black a::before, .wp-block-crown-blocks-button.cta-link-black .intake-form_wrapper .gform_page_footer a.gform_previous_button::before, .intake-form_wrapper .gform_page_footer .wp-block-crown-blocks-button.cta-link-black a.gform_previous_button::before {
+  background-color: #000; }
+
+ol.large-numbers {
+  counter-reset: item;
+  padding-left: 0; }
+  ol.large-numbers li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 1rem; }
+    ol.large-numbers li::before {
+      content: counter(item);
+      counter-increment: item;
+      width: 2.5rem;
+      height: 2.5rem;
+      -webkit-box-flex: 0;
+          -ms-flex: 0 0 2.5rem;
+              flex: 0 0 2.5rem;
+      margin-right: 1rem;
+      border-radius: 1000px;
+      font-weight: 700;
+      border: 1px solid #fff;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      font-size: 20px; }
+
 #header {
   background-color: transparent;
   position: sticky;
