--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -4525,3 +4525,67 @@ form.center-search {
 		}
 	}
 }
+
+
+.wp-block-crown-blocks-button {
+	&.cta-link {
+		a.btn-link {
+			color: inherit !important;
+			letter-spacing: 0;
+			padding-bottom: 0;
+			border-bottom: none;
+			display: flex;
+			align-items: center;
+			&:hover {
+				&::before {
+					background-position: 70% 30%;
+				}
+			}
+			&::before {
+				content: '';
+				flex: 0 0 2rem;
+				margin-right: 0.75rem;
+				height: 2rem;
+				background-color: $dark;
+				border-radius: 1000px;
+				display: block;
+				background-image: escape-svg(url('data:image/svg+xml,<svg width="1200pt" height="1200pt" version="1.1" fill="#FFFFFF" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg"><defs><clipPath id="b"><path d="m883 222.14h94.859v708.86h-94.859z"/></clipPath><clipPath id="a"><path d="m269 222.14h708.86v94.855h-708.86z"/></clipPath></defs><path d="m306.34 960.46-66.797-66.797 667.96-667.96 66.797 66.797z" fill-rule="evenodd"/><g clip-path="url(#b)"><path d="m883.39 930.62v-708.48h94.465v708.48z" fill-rule="evenodd"/></g><g clip-path="url(#a)"><path d="m269.38 316.61v-94.465h708.48v94.465z" fill-rule="evenodd"/></g></svg>'));
+				background-repeat: no-repeat;
+				background-position: 50% 50%;
+				background-size: 1rem 1rem;
+				transition: background-position .2s;
+			}
+			.btn-label {
+				text-decoration: underline;
+			}
+		}
+	}
+	&.cta-link-red a.btn-link::before { background-color: $red; }
+	&.cta-link-blue a.btn-link::before { background-color: $blue; }
+	&.cta-link-black a.btn-link::before { background-color: #000; }
+}
+
+ol.large-numbers {
+	counter-reset: item;
+	padding-left: 0;
+	li {
+		display: flex;
+		align-items: center;
+		margin-bottom: 1rem;
+		&::before {
+			content: counter(item);
+			counter-increment: item;
+			width: 2.5rem;
+			height: 2.5rem;
+			flex: 0 0 2.5rem;
+			margin-right: 1rem;
+			border-radius: 1000px;
+			font-weight: 700;
+			border: 1px solid #fff;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 20px;
+		}
+	}
+}
