Updating form styles

--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -162,6 +162,7 @@ $gform-gutter-width: 10px;
 
 .gfield {
 	@extend .form-group;
+	clear: both;
 	&.gfield_error {
 
 		label,
@@ -742,6 +743,9 @@ $gform-gutter-width: 10px;
 				background-color: rgba($primary, 0.05);
 			}
 		}
+	}
+	select {
+		box-shadow: inset 0 -2px $primary;
 	}
 	textarea {
 		@extend .form-control;
