--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -163,6 +163,9 @@ $gform-gutter-width: 10px;
 .gfield {
 	@extend .form-group;
 	clear: both;
+	&.gfield--type-hidden {
+		clear: none;
+	}
 	&.gfield_error {
 
 		label,
