--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -752,6 +752,7 @@ $gform-gutter-width: 10px;
 	.gfield_date_year,
 	.ginput_container_date input {
 		padding: add($input-padding-y, $input-border-width) $input-padding-x !important;
+		height: auto !important;
 	}
 	select {
 		box-shadow: inset 0 -2px $primary;
