--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -667,6 +667,11 @@ $gform-gutter-width: 10px;
 			text-indent: 0;
 		}
 	}
+	.gfield.gfield-lg {
+		input {
+			font-size: 1.75rem;
+		}
+	}
 	.gfield.accordion {
 		&.expanded {
 			.gfield_label {
