--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -38017,6 +38017,8 @@ body.single-event #main .container > .inner > .wp-block-crown-blocks-webinar-hea
 .intake-form_wrapper select {
   -webkit-box-shadow: inset 0 -2px #032040;
           box-shadow: inset 0 -2px #032040;
+  border: none;
+  background-color: rgba(3, 32, 64, 0.05);
 }
 .intake-form_wrapper textarea {
   border: none;
@@ -38160,6 +38162,89 @@ body.single-event #main .container > .inner > .wp-block-crown-blocks-webinar-hea
   height: 2rem;
 }
 .intake-form_wrapper .gfield--type-consent .gfield_consent_label {
+  display: none;
+}
+.intake-form_wrapper .gfield--type-list .gfield_label {
+  display: none;
+}
+.intake-form_wrapper .gfield--type-list .ginput_container .btn-add-item {
+  border: none;
+  position: relative;
+  line-height: 1.2;
+  font-size: 0.875rem;
+  font-weight: 700;
+  padding: 10px;
+  letter-spacing: 0;
+  padding-left: 36px;
+}
+.intake-form_wrapper .gfield--type-list .ginput_container .btn-add-item::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: calc(50% - 12px);
+  width: 24px;
+  height: 24px;
+  display: block;
+  background-color: transparent;
+  background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23032040" class="bi bi-plus-circle" viewBox="0 0 16 16"%3e%3cpath d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/%3e%3cpath d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/%3e%3c/svg%3e');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.intake-form_wrapper table.gfield_list {
+  width: 100%;
+}
+.intake-form_wrapper table.gfield_list thead tr th {
+  padding: 0;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  line-height: 1.2;
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+.intake-form_wrapper table.gfield_list thead tr th:first-child {
+  padding-left: 36px;
+}
+.intake-form_wrapper table.gfield_list thead tr td {
+  padding: 0;
+  width: 0;
+  display: none;
+}
+.intake-form_wrapper table.gfield_list tbody tr {
+  position: relative;
+}
+.intake-form_wrapper table.gfield_list tbody tr:first-child {
+  display: none;
+}
+.intake-form_wrapper table.gfield_list tbody tr td {
+  padding: 0;
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+.intake-form_wrapper table.gfield_list tbody tr td:first-child {
+  padding-left: 36px;
+}
+.intake-form_wrapper table.gfield_list tbody tr td.gfield_list_icons {
+  padding-left: 0;
+  width: 0;
+}
+.intake-form_wrapper table.gfield_list tbody tr td.gfield_list_icons .add_list_item {
+  display: none;
+}
+.intake-form_wrapper table.gfield_list tbody tr td.gfield_list_icons .delete_list_item {
+  position: absolute;
+  left: 0;
+  top: 11px;
+  width: 24px;
+  height: 24px;
+  display: block;
+  background-color: transparent;
+  background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23032040" class="bi bi-x-circle" viewBox="0 0 16 16"%3e%3cpath d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/%3e%3cpath d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/%3e%3c/svg%3e');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.intake-form_wrapper table.gfield_list tbody tr td.gfield_list_icons .delete_list_item img {
   display: none;
 }
 .intake-form_wrapper .gfield.helper-description .gfield_description {
