--- a/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/modules/_gravity-forms.scss
@@ -765,6 +765,8 @@ $gform-gutter-width: 10px;
 	}
 	select {
 		box-shadow: inset 0 -2px $primary;
+		border: none;
+		background-color: rgba($primary, 0.05);
 	}
 	textarea {
 		@extend .form-control;
@@ -894,6 +896,95 @@ $gform-gutter-width: 10px;
 		}
 		.gfield_consent_label {
 			display: none;
+		}
+	}
+	.gfield--type-list {
+		.gfield_label {
+			display: none;
+		}
+		.ginput_container {
+			.btn-add-item {
+				border: none;
+				position: relative;
+				line-height: 1.2;
+				font-size: .875rem;
+				font-weight: 700;
+				padding: 10px;
+				letter-spacing: 0;
+				padding-left: 36px;
+				&::before {
+					content: '';
+					position: absolute;
+					left: 0;
+					top: calc(50% - 12px);
+					width: 24px;
+					height: 24px;
+					display: block;
+					background-color: transparent;
+					background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$primary}" class="bi bi-plus-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/></svg>'));
+					background-position: center;
+					background-repeat: no-repeat;
+					background-size: contain;
+				}
+			}
+		}
+	}
+	table.gfield_list {
+		width: 100%;
+		thead tr {
+			th {
+				padding: 0;
+				padding-left: 10px;
+				padding-bottom: 10px;
+				line-height: 1.2;
+				font-size: .875rem;
+				font-weight: 700;
+				&:first-child {
+					padding-left: 36px;
+				}
+			}
+			td {
+				padding: 0;
+				width: 0;
+				display: none;
+			}
+		}
+		tbody tr {
+			position: relative;
+			&:first-child {
+				display: none;
+			}
+			td {
+				padding: 0;
+				padding-left: 10px;
+				padding-bottom: 10px;
+				&:first-child {
+					padding-left: 36px;
+				}
+			}
+			td.gfield_list_icons {
+				padding-left: 0;
+				width: 0;
+				.add_list_item {
+					display: none;
+				}
+				.delete_list_item {
+					position: absolute;
+					left: 0;
+					top: 11px;
+					width: 24px;
+					height: 24px;
+					display: block;
+					background-color: transparent;
+					background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$primary}" class="bi bi-x-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/></svg>'));
+					background-position: center;
+					background-repeat: no-repeat;
+					background-size: contain;
+					img {
+						display: none;
+					}
+				}
+			}
 		}
 	}
 	.gfield.helper-description {
